--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Site Portfolio de Nina Carducci</title>
+	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
+	<meta name="description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique." />
+
+	<!-- Schema.org meta for Google+ -->
+	<meta itemprop="name" content="Nina Carducci, photographe professionnelle à Bordeaux" />
+	<meta itemprop="description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique." />
+	<meta itemprop="image" content="https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp" />
+
+	<!-- Twitter meta tags  -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
+	<meta name="twitter:description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique.">
+	<meta name="twitter:image" content="https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp">
+	<meta name="twitter:image:alt" content="Portrait de Nina Carducci">
 	
+	<!-- Open Graph (FB) meta tags -->
+	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
+	<meta property="og:site_name" content="Nina Carducci, photographe professionnelle à Bordeaux">
+	<meta property="og:type" content="article">
+	<meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique.">
+	<meta property="og:image" content="https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp"/>
+	<meta property="og:url" content="https://maximed74.github.io/Site-portfolio-Nina-Carducci/">
+
+	<!-- Links to stylesheets and Google Fonts -->
 	<link rel="stylesheet" href="./assets//bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 </head>
+
 <body>
 	<header class="top-header">
 		<h3 class="name">Nina Carducci</h3>
