Rich snippets added for testing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Open Graph (FB) meta tags -->
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
 	<meta property="og:site_name" content="Nina Carducci, photographe professionnelle à Bordeaux">
-	<meta property="og:type" content="article">
+	<meta property="og:type" content="website">
 	<meta property="og:description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique.">
 	<meta property="og:image" content="https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp"/>
 	<meta property="og:url" content="https://maximed74.github.io/Site-portfolio-Nina-Carducci/">
@@ -32,6 +32,30 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Person",
+		  "name": "Nina Carducci",
+		  "description": "Photographe professionnelle à Bordeaux, saisissant des moments merveilleux d'une vie avec son regard, son approche et sa technique.",
+		  "image": "https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp",
+		  "sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr"
+		}
+	</script>
+
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "CreativeWork",
+		  "name": "Galerie de photos de Nina Carducci",
+		  "description": "Découvrez la galerie de photos de Nina Carducci, photographe professionnelle à Bordeaux, comprenant des images de concerts, d'entreprises, de mariages et de portraits.",
+		  "image": [
+			"https://nina-carducci-photographe.netlify.app/assets/images/desktop/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp",
+			"https://nina-carducci-photographe.netlify.app/assets/images/desktop/slider/nicholas-green-nPz8akkUmDI-unsplash.webp",
+			"https://nina-carducci-photographe.netlify.app/assets/images/desktop/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+		  ]
+		}
+		</script>
 </head>
 
 <body>
