--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<meta property="og:url" content="https://maximed74.github.io/Site-portfolio-Nina-Carducci/">
 
 	<!-- Links to stylesheets and Google Fonts -->
-	<link rel="stylesheet" href="./assets//bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -96,7 +96,12 @@
 		</section>
 		<section id="about" itemscope itemtype="https://schema.org/Person">
 			<div class="picture left">
-				<img src="./assets/images/desktop/nina.webp" alt="Portrait de Nina Carducci">
+				<picture>
+					<source media="(max-width: 1921px)" srcset="./assets/images/desktop/nina.webp">
+					<source media="(max-width: 1000px)" srcset="./assets/images/tablette/nina.webp">
+					<source media="(max-width: 651px)" srcset="./assets/images/mobile/nina.webp">
+					<img src="./assets/images/desktop/nina.webp" alt="Portrait de Nina Carducci">
+				</picture>
 			</div>
 			<div id="about-me">
 				<h3 class="about-me__title">A propos de moi</h3>
@@ -184,23 +189,40 @@
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email">
 					<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
-			</form>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<input type="submit" value="Envoyer"/>
+				</form>
+				<div class="contact-info">
+					<div class="adress contact-info-section" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+						<h4 class="contact-info-title">Adresse :</h4>
+						<p itemprop="streetAddress">68 avenue Alsace-Lorraine</p>
+						<p itemprop="postalCode">33200</p>
+						<p itemprop="addressLocality">Bordeaux</p>
+					</div>
+					<div class="contact-info-section" itemprop="telephone">
+						<h4 class="contact-info-title">Téléphone : </h4>
+						<a href="tel:0556677889">05 56 67 78 89</a>
+					</div>
+					<div class="contact-info-section">
+						<h4 class="contact-info-title">Horaires d'ouverture :</h4>
+						<p class="lundi">du lundi au vendredi de 10h à 19h</p>
+					</div>
+			  	</div>
+			</div>
+			<div class="picture right">
+				<picture>
+					<source media="(min-width: 1200px)" srcset="./assets/images/desktop/camera.webp">
+					<source media="(min-width: 800px)" srcset="./assets/images/tablette/camera.webp">
+					<img itemprop="image" itemscope itemtype="https://schema.org/ImageObject" src="./assets/images/desktop/camera.webp" alt="Appareil photo avec un filtre rougeoyant">
+				</picture>
+			</div>
 		</div>
-		<div class="picture right">
-			<picture>
-				<source media="(min-width: 1200px)" srcset="./assets/images/desktop/camera.webp">
-				<source media="(min-width: 800px)" srcset="./assets/images/tablette/camera.webp">
-				<img itemprop="image" itemscope itemtype="https://schema.org/ImageObject" src="./assets/images/desktop/camera.webp" alt="Appareil photo avec un filtre rougeoyant">
-			</picture>
-		</div>
-	</div>
+	
 	</footer>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="./assets/maugallery.js"></script>
-<script src="./assets/scripts.js"></script>
-<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/maugallery.js"></script>
+	<script src="./assets/scripts.js"></script>
 </body>
 </html>
