--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 	<!-- Links to stylesheets and Google Fonts -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -178,7 +178,7 @@
 			</figure>
 		</div>
 	</main>
-	<footer id="contact" itemscope itemtype="https://schema.org/ContactPage">
+	<section id="contact" itemscope itemtype="https://schema.org/ContactPage">
 		<div class="container">
 			<div class="form-container">
 				<h2 class="une-question">Une question ? Une demande de devis ?</h2>
@@ -192,22 +192,6 @@
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer"/>
 				</form>
-				<div class="contact-info">
-					<div class="adress contact-info-section" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-						<h3 class="contact-info-title">Adresse :</h3>
-						<p itemprop="streetAddress">68 avenue Alsace-Lorraine</p>
-						<p itemprop="postalCode">33200</p>
-						<p itemprop="addressLocality">Bordeaux</p>
-					</div>
-					<div class="contact-info-section" itemprop="telephone">
-						<h3 class="contact-info-title">Téléphone : </h3>
-						<a href="tel:0556677889">05 56 67 78 89</a>
-					</div>
-					<div class="contact-info-section">
-						<h3 class="contact-info-title">Horaires d'ouverture :</h3>
-						<p class="lundi">du lundi au vendredi de 10h à 19h</p>
-					</div>
-			  	</div>
 			</div>
 			<div class="picture right">
 				<picture>
@@ -217,8 +201,23 @@
 				</picture>
 			</div>
 		</div>
-	
-	</footer>
+	</section>
+	<footer class="contact-info">
+		<div class="adress contact-info-section" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+			<h3 class="contact-info-title">Adresse</h3>
+			<p itemprop="streetAddress">68 avenue Alsace-Lorraine</p>
+			<p itemprop="postalCode">33200</p>
+			<p itemprop="addressLocality">Bordeaux</p>
+		</div>
+		<div class="contact-info-section telephone" itemprop="telephone">
+			<h3 class="contact-info-title">Téléphone</h3>
+			<a href="tel:0556677889">05 56 67 78 89</a>
+		</div>
+		<div class="contact-info-section days-opened">
+			<h3 class="contact-info-title">Horaires d'ouverture</h3>
+			<p class="lundi">du lundi au vendredi de 10h à 19h</p>
+		</div>
+	  </footer>
 
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
