--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 
 </head>
 
@@ -140,7 +141,7 @@
 					<div class="service" itemprop="hasOfferCatalog" itemscope itemtype="https://schema.org/OfferCatalog">
 						<div class="service__description">
 							<h3 itemprop="category">Shooting photo</h3>
-							<p itemprop="description">Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+							<p itemprop="description">Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je suis située dans la région Bordelaise et je peux aussi me déplacer en Île-de-France pour réaliser vos photos</p>
 						</div>
 						<div class="service__price" itemprop="itemListElement" itemscope itemtype="https://schema.org/Offer">
 						<h4 itemprop="price">350€/demi journée</h4>
