--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 							<source media="(min-width: 300px)" srcset="./assets/images/mobile/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
 							<img src="./assets/images/desktop/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule dans un concert">
 						</picture>
-						<meta itemprop="name" content="Foule dans un concert" itemscope itemtype="https://schema.org/ImageObject">
+						<meta itemprop="name" content="Foule dans un concert">
 					</div>
-					<div class="carousel-item">
+					<div class="carousel-item" itemscope itemtype="https://schema.org/ImageObject">
 						<picture>
 							<source media="(min-width: 1200px)" srcset="./assets/images/desktop/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 800px)" srcset="./assets/images/tablette/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
