--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 						<picture>
 							<source media="(min-width: 1200px)" srcset="./assets/images/desktop/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 800px)" srcset="./assets/images/tablette/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
-							<source media="(min-width: 300px)" srcset="./assets/images/mobile/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
+							<source media="(min-width: 413px)" srcset="./assets/images/mobile/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
+							<source media="(min-width: 0px)" srcset="./assets/images/412/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
 							<img src="./assets/images/desktop/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaire sur un passage piéton">
 						</picture>
 						<meta itemprop="name" content="Homme d'affaire sur un passage piéton">
@@ -70,7 +71,8 @@
 						<picture>
 							<source media="(min-width: 1200px)" srcset="./assets/images/desktop/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 800px)" srcset="./assets/images/tablette/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
-							<source media="(min-width: 300px)" srcset="./assets/images/mobile/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
+							<source media="(min-width: 413px)" srcset="./assets/images/mobile/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
+							<source media="(min-width: 0px)" srcset="./assets/images/412/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
 							<img src="./assets/images/desktop/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule dans un concert">
 						</picture>
 						<meta itemprop="name" content="Foule dans un concert">
@@ -79,7 +81,8 @@
 						<picture>
 							<source media="(min-width: 1200px)" srcset="./assets/images/desktop/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 800px)" srcset="./assets/images/tablette/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
-							<source media="(min-width: 300px)" srcset="./assets/images/mobile/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
+							<source media="(min-width: 413px)" srcset="./assets/images/mobile/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
+							<source media="(min-width: 0px)" srcset="./assets/images/412/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
 							<img src="./assets/images/desktop/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Couple de mariés qui dansent">
 						</picture>
 						<meta itemprop="name" content="Couple de mariés qui dansent">
@@ -198,7 +201,8 @@
 				<picture>
 					<source media="(min-width: 1200px)" srcset="./assets/images/desktop/camera.webp">
 					<source media="(min-width: 800px)" srcset="./assets/images/tablette/camera.webp">
-					<img itemprop="image" itemscope itemtype="https://schema.org/ImageObject" src="./assets/images/desktop/camera.webp" alt="Appareil photo avec un filtre rougeoyant">
+					<source media="(min-width: 0px)" srcset="./assets/images/412/camera.webp">
+					<img src="./assets/images/desktop/camera.webp" alt="Appareil photo avec un filtre rougeoyant">
 				</picture>
 			</div>
 		</div>
