Google rich snippets improvments

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<meta charset="UTF-8">
+	<head>
+		<!-- Links to stylesheets and Google Fonts -->
+		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" href="./assets/style.min.css"> 
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique." />
@@ -26,11 +31,6 @@
 	<meta property="og:image" content="https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp"/>
 	<meta property="og:url" content="https://maximed74.github.io/Site-portfolio-Nina-Carducci/">
 
-	<!-- Links to stylesheets and Google Fonts -->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	
 
 </head>
@@ -63,7 +63,7 @@
 							<source media="(min-width: 800px)" srcset="./assets/images/tablette/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 413px)" srcset="./assets/images/mobile/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 0px)" srcset="./assets/images/412/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100">
-							<img src="./assets/images/desktop/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaire sur un passage piéton">
+							<img src="./assets/images/mobile/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaire sur un passage piéton">
 						</picture>
 						<meta itemprop="name" content="Homme d'affaire sur un passage piéton">
 					</div>
@@ -73,7 +73,7 @@
 							<source media="(min-width: 800px)" srcset="./assets/images/tablette/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 413px)" srcset="./assets/images/mobile/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 0px)" srcset="./assets/images/412/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100">
-							<img src="./assets/images/desktop/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule dans un concert">
+							<img src="./assets/images/mobile/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule dans un concert">
 						</picture>
 						<meta itemprop="name" content="Foule dans un concert">
 					</div>
@@ -83,7 +83,7 @@
 							<source media="(min-width: 800px)" srcset="./assets/images/tablette/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 413px)" srcset="./assets/images/mobile/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
 							<source media="(min-width: 0px)" srcset="./assets/images/412/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100">
-							<img src="./assets/images/desktop/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Couple de mariés qui dansent">
+							<img src="./assets/images/mobile/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Couple de mariés qui dansent">
 						</picture>
 						<meta itemprop="name" content="Couple de mariés qui dansent">
 					</div>
@@ -104,7 +104,7 @@
 					<source media="(max-width: 1921px)" srcset="./assets/images/desktop/nina.webp">
 					<source media="(max-width: 1000px)" srcset="./assets/images/tablette/nina.webp">
 					<source media="(max-width: 651px)" srcset="./assets/images/mobile/nina.webp">
-					<img src="./assets/images/desktop/nina.webp" alt="Portrait de Nina Carducci">
+					<img src="./assets/images/mobile/nina.webp" alt="Portrait de Nina Carducci">
 				</picture>
 			</div>
 			<div id="about-me">
@@ -202,7 +202,7 @@
 					<source media="(min-width: 1200px)" srcset="./assets/images/desktop/camera.webp">
 					<source media="(min-width: 800px)" srcset="./assets/images/tablette/camera.webp">
 					<source media="(min-width: 0px)" srcset="./assets/images/412/camera.webp">
-					<img src="./assets/images/desktop/camera.webp" alt="Appareil photo avec un filtre rougeoyant">
+					<img src="./assets/images/mobile/camera.webp" alt="Appareil photo avec un filtre rougeoyant">
 				</picture>
 			</div>
 		</div>
@@ -223,6 +223,25 @@
 			<p class="lundi">du lundi au vendredi de 10h à 19h</p>
 		</div>
 	  </footer>
+	  <script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "PhotographieStudio",
+		  "name": "Nina Carducci, photographe professionnelle à Bordeaux",
+		  "url": "https://ninacarducci.github.io/",
+		  "telephone": "05 56 67 78 89",
+		  "image": "https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "description": "Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique.",
+		  "openingHoursSpecification": "Lundi - Vendredi : 10h00 - 19h00"
+		}
+	  </script>
 
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
