Google rich snippets update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<!-- Links to stylesheets and Google Fonts -->
-		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 		<link rel="stylesheet" href="./assets/style.min.css"> 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -223,11 +223,12 @@
 			<p class="lundi">du lundi au vendredi de 10h à 19h</p>
 		</div>
 	  </footer>
-	  <script type="application/ld+json">
+
+	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
 		  "@type": "PhotographieStudio",
-		  "name": "Nina Carducci, photographe professionnelle à Bordeaux",
+		  "name": "Nina Carducci photographe professionnelle à Bordeaux",
 		  "url": "https://ninacarducci.github.io/",
 		  "telephone": "05 56 67 78 89",
 		  "image": "https://nina-carducci-photographe.netlify.app/assets/images/nina-lossy.webp",
@@ -241,8 +242,7 @@
 		  "description": "Nina Carducci, photographe professionnelle à Bordeaux, vous propose de saisir ces merveilleux moments d'une vie au travers de son regard, son approche, sa technique.",
 		  "openingHoursSpecification": "Lundi - Vendredi : 10h00 - 19h00"
 		}
-	  </script>
-
+	</script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js" defer></script>
